--- a/Rick-and-Morty/app/assets/scss/colors.scss
+++ b/Rick-and-Morty/app/assets/scss/colors.scss
@@ -1,4 +1,7 @@
 
 $color-primary: #bfde42;
 $color-secondary: #42b4ca;
+$color-terciary: #3685f4;
 $color-background: #f5f5f5;
+
+$color-input-background: #bcbcbc;
