--- a/Rick-and-Morty/app/assets/scss/colors.scss
+++ b/Rick-and-Morty/app/assets/scss/colors.scss
@@ -1,7 +1,11 @@
 
 $color-primary: #bfde42;
 $color-secondary: #42b4ca;
-$color-terciary: #3685f4;
+$color-tertiary: #3685f4;
 $color-background: #f5f5f5;
 
 $color-input-background: #bcbcbc;
+$color-header: #032100;
+
+
+$color-primary-hover: #a5c039;
