[1.9] Burger responsive menu and log out button

--- a/Rick-and-Morty/app/assets/scss/colors.scss
+++ b/Rick-and-Morty/app/assets/scss/colors.scss
@@ -7,5 +7,6 @@ $color-background: #f5f5f5;
 $color-input-background: #bcbcbc;
 $color-header: #032100;
 
+$color-error: #ff5b5b;
 
 $color-primary-hover: #a5c039;
