--- a/Rick-and-Morty/app/assets/scss/main.scss
+++ b/Rick-and-Morty/app/assets/scss/main.scss
@@ -5,6 +5,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
   font-family: "Inter", sans-serif;
 }
